package dh.backend.model;

public class EmpleadoContratado {
}
